Fix credentials spacing bug
Fixed huge bug in saving normal auth user by
trimming excess spacing in first, last name
and email before persisting user info to DB.
Also made small style changes to displaying
user info in Homepage.

--- a/dev/app/styles/styles.scss
+++ b/dev/app/styles/styles.scss
@@ -148,6 +148,7 @@ html {
     border: 1px solid salmon;
     height: 20%;
     width: 800px;
+    font-size: 1.5em;
   }
 
 }
